Fixed some warnings.